# routes/api.php
@@ -19,14 +19,5 @@ use App\Http\Controllers\UserController;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
-Route::get('/posts',[PostController::class,'index']);
-Route::get('/posts/{id}',[PostController::class,'show']);
-Route::post('/posts',[PostController::class,'store']);
-Route::delete('/posts/{id}',[PostController::class,'update']);
-Route::put('/posts/{id}',[PostController::class,'destroy']);
-
-Route::get('/users',[UserController::class,'index']);
-Route::get('/users/{id}',[UserController::class,'show']);
-Route::post('/users',[UserController::class,'store']);
-Route::delete('/users/{id}',[UserController::class,'update']);
-Route::put('/users/{id}',[UserController::class,'destroy']);
+Route::apiResource('posts',PostController::class);
+// Route::apiResource('posts','UserController');
