# storage/api-docs/api-docs.json
@@ -8,7 +8,7 @@
         "/api/posts": {
             "get": {
                 "tags": [
-                    "Post"
+                    "Posts"
                 ],
                 "summary": "Get all posts",
                 "operationId": "e9eaf7df702a94f4443677bd1a36cfe6",
@@ -31,11 +31,11 @@
             },
             "post": {
                 "tags": [
-                    "Post"
+                    "Posts"
                 ],
                 "summary": "Create a new post",
                 "description": "Create a new post with the provided title and description",
-                "operationId": "e65ec23954b56b8ece120e19fd94fe87",
+                "operationId": "4a657e51a0066c64781851f2fd2651e2",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -73,10 +73,10 @@
         "/api/posts/{id}": {
             "get": {
                 "tags": [
-                    "Post"
+                    "Posts"
                 ],
                 "summary": "Get one posts",
-                "operationId": "99f2bf367bbb5c01e8ee15c87c4cba37",
+                "operationId": "b0f9d92879218f68a376b6edc6467c67",
                 "parameters": [
                     {
                         "name": "id",
@@ -107,7 +107,7 @@
             },
             "put": {
                 "tags": [
-                    "Post"
+                    "Posts"
                 ],
                 "summary": "Update post",
                 "operationId": "929614537d76a081a92170a41ed3bdb3",
@@ -161,7 +161,7 @@
             },
             "delete": {
                 "tags": [
-                    "Post"
+                    "Posts"
                 ],
                 "summary": "Delete a specific post",
                 "operationId": "fad1726bd24cd459fc1525b67985df39",
@@ -176,26 +176,6 @@
                         }
                     }
                 ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "example": "New Post Title"
-                                    },
-                                    "description": {
-                                        "type": "string",
-                                        "example": "This is a new post description"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
                 "responses": {
                     "200": {
                         "description": "Delete Post"
